apps/sure/30-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sure-ingressroute
  namespace: sure
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`sure.mbtux.com`)
    services:
    - name: sure
      port: 80
    middlewares:
    - name: security-headers
    - name: compress
  tls:
    options:
      name: secure-default
